# AI-Invoice-Parser-Solana

./: .gitignore
invoice-oracle-backend/: .env.example  Cargo.toml
invoice-oracle-backend/src/: main.rs
oracle-test-client/: Anchor.toml
oracle-test-client/programs/invoice-claim/: Cargo.toml
oracle-test-client/programs/invoice-claim/src/: lib.rs  state.rs
oracle-test-client/programs/invoice-claim/src/instructions/: close.rs  escrow.rs  invoice.rs  mod.rs  org.rs  payments.rs  vendor.rs  vrf.rs
oracle-test-client/scripts/: bootstrap.ts  request_vrf.ts  submit_request.ts
oracle-test-client/tests/: invoice-claim.ts
