[package]
name = "invoice-oracle-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anchor-client = "0.30"
anchor-lang = "0.30"
solana-sdk = "1.18"
solana-client = "1.18"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
regex = "1.10"
chrono = "0.4"
bs58 = "0.5"
borsh = "0.10.4"
dotenvy = "0.15.7"
