[package]
name = "invoice-claim"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "invoice_claim"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl  = "0.31.1"
ephemeral-rollups-sdk = { version = "0.2.12", features = ["anchor"] }
ephemeral-vrf-sdk = { version = "0.2.0", features = ["anchor"] }
